2012-10-09  Peter Rosin  <peda@lysator.liu.se>

	* libc/posix/wordfree.c (wordfree): The wrong words are freed
	when WRDE_DOOFFS is in use. Restructure the code so that the memory
	needed to be freed is instead kept in an internal linked list...
	* libc/posix/wordexp2.h: ...as defined here...
	* libc/posix/wordexp.c (wordexp): ...and build this internal
	linked list here, avoiding wasteful strdup calls in the process.

2012-10-09  Peter Rosin  <peda@lysator.liu.se>

	* libc/posix/wordexp.c (wordexp): Return WRDE_NOSPACE on resource
	allocation failure. Cleanup leftover resources when failing.

2012-10-09  Peter Rosin  <peda@lysator.liu.se>

	* libc/posix/wordexp.c (wordexp): Handle expanded words longer
	than 500 bytes.

2012-10-09  Peter Rosin  <peda@lysator.liu.se>

	* libc/posix/wordexp.c (wordexp): Don't leak file streams.

2012-10-03  DJ Delorie  <dj@redhat.com>

	* libc/machine/rl78/setjmp.S: Convert from CPP macros to GAS
	macros, to avoid dependence on the line separation character.

2012-10-01  DJ Delorie  <dj@redhat.com>

	* libc/sys/sysnecv850/sbrk.c (_sbrk): Change heap_start to be an
	array of undefined size, to avoid problems when compiled with
	-msda=4.

2012-10-01  Jeff Johnston  <jjohnstn@redhat.com>

	* README: replace sources.redhat.com with sourceware.org.
	* HOWTO: Ditto.

2012-09-26  Ian Bolton  <ian.bolton@arm.com>
        Jim MacArthur  <jim.macarthur@arm.com>
        Marcus Shawcroft  <marcus.shawcroft@arm.com>
        Nigel Stephens  <nigel.stephens@arm.com>
        Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>
        Richard Earnshaw  <rearnsha@arm.com>
        Sofiane Naci  <sofiane.naci@arm.com>
        Tejas Belagod  <tejas.belagod@arm.com>
        Yufeng Zhang  <yufeng.zhang@arm.com>

	* configure.host: Add AArch64.
	* libc/include/machine/ieeefp.h: Add AArch64.
	* libc/include/machine/setjmp.h: Add AArch64.
	* libc/include/machine/time.h: Add AArch64.
	* libc/include/sys/config.h: Add AArch64.