@@ -34,6 +34,7 @@
  */
 
 #include <sys/cdefs.h>
+#include <_ansi.h>
 
 /*
  * The matching engine and friends.  This file is #included by regexec.c
@@ -364,8 +365,7 @@ sopno stopst;
 	char *ssp;		/* start of string matched by subsubRE */
 	char *sep;		/* end of string matched by subsubRE */
 	char *oldssp;		/* previous ssp */
-#if defined (__GNUC__) && \
-    ((__GNUC__ == 4 && __GNUC_MINOR__ >= 6) || __GNUC__ > 4)
+#if __GNUC_PREREQ (4, 6)
 /* dp is only used for assertion testing which, for some reason, is not
    recognized as usage. */
 #pragma GCC diagnostic ignored "-Wunused-but-set-variable"
